syntax = "proto3";
package editor;

service Editor {
  rpc UndoTransaction(UndoTransactionRequest) returns (UndoTransactionResponse);

  rpc RedoTransaction(RedoTransactionRequest) returns (RedoTransactionResponse);

  rpc InitLogStream(InitLogStreamRequest) returns (stream InitLogStreamResponse);

  rpc InitMessageStream(InitMessageStreamRequest) returns (stream InitMessageStreamResponse);
}

message UndoTransactionRequest {
  int32 id = 1;
}
message UndoTransactionResponse {
  int32 id = 1;
}
message RedoTransactionRequest {
  int32 id = 1;
}
message RedoTransactionResponse {
  int32 id = 1;
}

message InitLogStreamRequest {}

enum Level {
  ERROR = 0;
  WARN = 1;
  INFO = 2;
  DEBUG = 3;
  TRACE = 4;
}

message TraceEvent {
  Level level = 1;
  int64 time = 2;
  string target = 3;
  string message = 4;
}

message InitLogStreamResponse {
  oneof response {
    TraceEvent trace_event = 1;
    uint64 lagging = 2;
  }
}

message InitMessageStreamRequest {}

enum MessageType {
  SelectionChanged = 0;
  ResourceChanged = 1;
}

message Message {
  MessageType msg_type = 1;
  string payload = 2;
}

message InitMessageStreamResponse {
  oneof response {
    Message message = 1;
    uint64 lagging = 2;
  }
}